WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
179749
Fix fast/events/message-port-postMessage-recursive.html after
r224896
https://bugs.webkit.org/show_bug.cgi?id=179749
Summary
Fix fast/events/message-port-postMessage-recursive.html after r224896
Alex Christensen
Reported
2017-11-15 16:13:00 PST
Fix fast/events/message-port-postMessage-recursive.html after
r224896
Attachments
Patch
(1.61 KB, patch)
2017-11-15 16:15 PST
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Patch
(1.61 KB, patch)
2017-11-15 16:19 PST
,
Alex Christensen
jer.noble
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2017-11-15 16:15:46 PST
Created
attachment 327033
[details]
Patch
Alex Christensen
Comment 2
2017-11-15 16:19:37 PST
Created
attachment 327034
[details]
Patch
Alex Christensen
Comment 3
2017-11-15 16:36:51 PST
https://trac.webkit.org/changeset/224907/webkit
Radar WebKit Bug Importer
Comment 4
2017-11-15 16:38:15 PST
<
rdar://problem/35575676
>
Alexey Proskuryakov
Comment 5
2017-11-16 22:16:18 PST
Comment on
attachment 327034
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=327034&action=review
> Source/WTF/wtf/mac/MainThreadMac.mm:128 > + return currentMode == (NSString *)kCFRunLoopCommonModes
I don't see how this can work. According to documentation, "Run loops never run in this mode".
https://developer.apple.com/documentation/corefoundation/cfrunloop/common_mode_flag
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug