Fix fast/events/message-port-postMessage-recursive.html after r224896 https://bugs.webkit.org/show_bug.cgi?id=179749

Reviewed by Jer Noble.

* wtf/mac/MainThreadMac.mm:
(WTF::currentRunLoopInCommonMode):
We sometimes run the runloop in kCFRunLoopDefaultMode, which should also have the responsiveness optimization.
This allows the runloop to continue to iterate when we are doing lots of things on the main thread.
CFRunLoop.h has a special definition of these two constants.



Canonical link: https://commits.webkit.org/195784@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@224907 268f45cc-cd09-0410-ab3c-d52691b4dbfc